--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -7,7 +7,10 @@
     <title>Vue.js Intro</title>
   </head>
   <body>
-    <div id="myApp"></div>
+    <div id="myApp">
+      <h1>{{title}}</h1>
+      <p>{{message}}</p>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
