--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -10,6 +10,7 @@
     <div id="myApp">
       <h1>{{title}}</h1>
       <p>{{message}}</p>
+      <button v-on:click="changeMessage">Change Message</button>
     </div>
     <script src="app.js"></script>
   </body>
